Removing a duplicate fixed positioning rule, caused overflow issues with padding control

--- a/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
+++ b/boldgrid-theme-framework/assets/css/boldgrid-theme-framework.css
@@ -4227,9 +4227,6 @@ footer .bgtfw-widget-row {
   .header-left .has-youtube-header .custom-header-media, .header-right .has-youtube-header .custom-header-media {
     height: 100%;
   }
-  .header-left.header-fixed #wp-custom-header, .header-right.header-fixed #wp-custom-header {
-    position: fixed;
-  }
 }
 
 /* Set up header for flex styles */
