--- a/src/assets/scss/boldgrid/_temp.scss
+++ b/src/assets/scss/boldgrid/_temp.scss
@@ -208,11 +208,6 @@
 		.has-youtube-header .custom-header-media {
 			height: 100%;
 		}
-		&.header-fixed {
-			#wp-custom-header {
-				position: fixed;
-			}
-		}
 	}
 }
 
